# rzip

./: .gitignore  .yamllint  Cargo.toml  DEPENDENCIES.md  Makefile.toml  README.md
.circleci/: config.yml
benches/: clap_arguments.rs  parsing.rs
cli_def/: en_us.yml
src/: lib.rs  main.rs  options.rs
tests/: test_utils.rs  unzip_file.rs
