[package]
name = "rzip"
version = "0.1.0"
authors = ["David Bonet <dbmontes@gmail.com>", "Lachezar Lechev <elpiel93@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0/MIT"

[badges]
circle-ci = { repository = "rzip/rzip" }

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
zip = "0.5.3"
ignore = "0.4"
# globset = "0.3"
async-std = "1"
[dev-dependencies]
sha2 = "0.8.0"
criterion = "0.3"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "clap_arguments"
harness = false
